--- a/Class-Notes/HTML/HTML-Intro/index.html
+++ b/Class-Notes/HTML/HTML-Intro/index.html
@@ -6,12 +6,7 @@
     <title>HTML Intro</title>
   </head>
   <body>
-    <h1>HTML Intro</h1>
-    <h2>HTML Intro</h2>
-    <h3>HTML Intro</h3>
-    <h4>HTML Intro</h4>
-    <h5>HTML Intro</h5>
-    <h6>HTML Intro</h6>
+    <h1>HTML Intro Update</h1>
 
     <ol>
       <li>Rottweiler</li>
